# koenig-planner

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md  audit.md  deny.toml  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-wasm.yml  security.yml
benches/: sweep_dual.rs
crates/api/: Cargo.toml  README.md
crates/api/src/: convert.rs  dto.rs  lib.rs
crates/api/tests/: fuzz_json.rs  golden.rs  grid_cap.rs  run_json.rs  serde_shapes.rs
crates/py/: .gitignore  Cargo.toml  README.md
crates/py/examples/: primer_history.py  showcase.py
crates/py/python/koenig_planner/: __init__.py  __init__.pyi  _koenig_planner.pyi
crates/py/src/: convert.rs  lib.rs
crates/py/tests/: test_golden.py  test_solve_json.py
crates/server/: Cargo.toml  Dockerfile  README.md  golden.json
crates/server/src/: lib.rs  main.rs
crates/server/tests/: golden.rs  middleware.rs
crates/validation/: Cargo.toml
crates/validation/src/: lib.rs
crates/validation/tests/: invariants.rs
crates/wasm/: Cargo.toml  LICENSE-APACHE  README.md
crates/wasm/src/: convert.rs  dto.rs  frames.rs  geometry.rs  lib.rs  roe_track.rs
crates/wasm/tests/: web.rs
crates/wasm/www/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/wasm/www/src/: App.tsx  ErrorBanner.tsx  Panel.tsx  PlanTable.tsx  Readout.tsx  defaults.test.ts  defaults.ts  export.test.ts  export.ts  main.ts  main.tsx  outcomeDisplay.test.ts  outcomeDisplay.ts  render.ts  style.css  useSolve.ts  useSweep.test.ts  useSweep.ts  wasm.ts
crates/wasm/www/src/app/: ErrorBoundary.tsx  Readout.tsx
crates/wasm/www/src/charts/: Kpis.tsx  LambdaGlyph.tsx  PrimerComponents.tsx  PrimerMagnitude.tsx  RoePlanes.tsx  RtnComponents.tsx  RtnLegend.tsx  Sweep.tsx  Timeline.tsx  cursorUtil.test.ts  cursorUtil.ts  lambdaGlyphUtil.test.ts  lambdaGlyphUtil.ts  roePlanesUtil.test.ts  roePlanesUtil.ts  svgUtil.test.ts  svgUtil.ts
crates/wasm/www/src/controls/: Controls.tsx  NumberField.test.ts  NumberField.tsx  request.ts
crates/wasm/www/src/hooks/: useSolve.ts  useSweep.test.ts  useSweep.ts
crates/wasm/www/src/lib/: defaults.ts  export.test.ts  export.ts  orbit.test.ts  orbit.ts  rtn.ts  svgUtil.ts  wasm.ts
crates/wasm/www/src/scene/: Arrow.tsx  EciScene.tsx  Playback.tsx  RtnScene.tsx  palette.ts  playbackUtil.test.ts  playbackUtil.ts  vec.test.ts  vec.ts
crates/wasm/www/src/ui/: Panel.tsx  PlanTable.tsx  SectionBand.tsx
docs/superpowers/: phase1-dynamics-verification-report.md
docs/superpowers/plans/: 2026-06-17-koenig-planner-phase0-scaffolding.md  2026-06-17-koenig-planner-phase1-dynamics.md  2026-06-17-koenig-planner-phase2-cost-models.md  2026-06-17-koenig-planner-phase3-solver-wrappers.md  2026-06-17-koenig-planner-phase4-algorithms.md  2026-06-18-koenig-planner-phase5-worked-example.md  2026-06-18-koenig-planner-phase5b-robust-extraction.md  2026-06-19-koenig-planner-phase6-monte-carlo.md
docs/superpowers/specs/: 2026-06-17-koenig-planner-rust-design.md
examples/: mdot.rs
src/: lib.rs  types.rs
src/algorithm/: extract.rs  init.rs  mod.rs  refine.rs
src/cost/: facemax.rs  mod.rs  norm2.rs  piecewise.rs
src/dynamics/: b_matrix.rs  constants.rs  j2_roe.rs  kepler.rs  mod.rs  orbit.rs  stm.rs
src/solver/: extract_qp.rs  min_fuel_socp.rs  mod.rs  refine_socp.rs  sweep_dual.rs  sweep_solve.rs
tests/: algorithm.rs  api.rs  fd_b_matrix.rs  fd_stm.rs  monte_carlo.rs  primer.rs  property_invariants.proptest-regressions  property_invariants.rs  serde_roundtrip.rs  serde_roundtrip_prop.rs  solver.rs  worked_example.rs
