[workspace]
members = ["crates/api", "crates/py", "crates/server", "crates/wasm"]
default-members = [".", "crates/api"]
resolver = "2"

[package]
name = "koenig-damico-planner"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
authors = ["sakobu <smelkon@icloud.com>"]
license = "MIT OR Apache-2.0"
description = "Faithful Rust re-implementation of the Koenig-D'Amico fuel-optimal impulsive control algorithm (IEEE TAC 2020)"
readme = "README.md"
repository = "https://github.com/sakobu/koenig-planner"
homepage = "https://github.com/sakobu/koenig-planner"
documentation = "https://docs.rs/koenig-damico-planner"
keywords = ["astrodynamics", "formation-flying", "spacecraft", "orbit", "optimization"]
categories = ["aerospace", "science", "mathematics", "simulation"]
exclude = ["assets/", "docs/", ".github/"]

[dependencies]
nalgebra = "0.35"
clarabel = "0.11"
thiserror = "2.0"

[dependencies.csv]
version = "1.4"
optional = true

[dependencies.plotters]
version = "0.3"
optional = true

[dependencies.rand]
version = "0.10"
optional = true

[dependencies.rand_distr]
version = "0.6"
optional = true

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dev-dependencies]
approx = "0.5"
serde_json = "1.0"

[features]
validation = ["dep:csv", "dep:plotters", "dep:rand", "dep:rand_distr"]
serde = ["dep:serde", "nalgebra/serde-serialize"]

# Render docs.rs with `serde` enabled so the derived Serialize/Deserialize impls
# on the public wire types are visible at https://docs.rs/koenig-damico-planner.
# Targeted on purpose (not `all-features`): `validation` is a tooling-only feature
# that pulls heavy native deps (plotters/fontconfig) and exposes no wire API.
[package.metadata.docs.rs]
features = ["serde"]
