[workspace]
members = ["crates/api", "crates/py", "crates/server", "crates/wasm", "crates/validation"]
default-members = [".", "crates/api"]
resolver = "2"

[workspace.dependencies]
proptest = "1"

[package]
name = "koenig-damico-planner"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
authors = ["sakobu <smelkon@icloud.com>"]
license = "MIT OR Apache-2.0"
description = "Faithful Rust re-implementation of the Koenig-D'Amico fuel-optimal impulsive control algorithm (IEEE TAC 2020)"
readme = "README.md"
repository = "https://github.com/sakobu/koenig-planner"
homepage = "https://github.com/sakobu/koenig-planner"
documentation = "https://docs.rs/koenig-damico-planner"
keywords = ["astrodynamics", "formation-flying", "spacecraft", "orbit", "optimization"]
categories = ["aerospace", "science", "mathematics", "simulation"]
exclude = ["assets/", "docs/", ".github/"]

[dependencies]
nalgebra = "0.35"
clarabel = "0.11"
thiserror = "2.0"

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dev-dependencies]
approx = "0.5"
serde_json = "1.0"
proptest = { workspace = true }

[features]
serde = ["dep:serde", "nalgebra/serde-serialize"]

# Render docs.rs with `serde` enabled so the derived Serialize/Deserialize impls
# on the public wire types are visible at https://docs.rs/koenig-damico-planner.
# `serde` is the core's only feature, so this is its full feature set; it is named
# explicitly to document that the published docs include the serde wire API.
[package.metadata.docs.rs]
features = ["serde"]
