[workspace]
members = ["crates/api", "crates/py", "crates/server", "crates/wasm", "crates/validation"]
default-members = [".", "crates/api"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.92"
authors = ["sakobu <smelkon@icloud.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
proptest = "1"
nalgebra = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
approx = "0.5"

[package]
name = "koenig-damico-planner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Faithful Rust re-implementation of the Koenig-D'Amico fuel-optimal impulsive control algorithm (IEEE TAC 2020)"
readme = "README.md"
repository = "https://github.com/sakobu/koenig-planner"
homepage = "https://github.com/sakobu/koenig-planner"
documentation = "https://docs.rs/koenig-damico-planner"
keywords = ["astrodynamics", "formation-flying", "spacecraft", "orbit", "optimization"]
categories = ["aerospace", "science", "mathematics", "simulation"]
exclude = ["assets/", "docs/", ".github/"]

[dependencies]
nalgebra = { workspace = true }
clarabel = "0.11"
thiserror = { workspace = true }

[dependencies.serde]
workspace = true
optional = true

[dev-dependencies]
approx = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true }

[features]
serde = ["dep:serde", "nalgebra/serde-serialize"]

# Render docs.rs with `serde` enabled so the derived Serialize/Deserialize impls
# on the public wire types are visible at https://docs.rs/koenig-damico-planner.
# `serde` is the core's only feature, so this is its full feature set; it is named
# explicitly to document that the published docs include the serde wire API.
[package.metadata.docs.rs]
features = ["serde"]
