[package]
name = "koenig-damico-planner-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Serde DTOs and a single dispatch entry point for the Koenig-D'Amico maneuver planner"
readme = "README.md"
# Workspace-internal facade: consumed by the Python, HTTP, and WASM frontends
# via path dependency, not published to crates.io. Use `koenig-damico-planner` directly
# for the solver. (Staying internal means the core path dep needs no `version` pin.)
publish = false

[dependencies]
koenig-damico-planner = { path = "../..", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
nalgebra = { workspace = true }
proptest = { workspace = true }
