[package]
name = "koenig-damico-planner-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Python bindings for the Koenig-D'Amico fuel-optimal impulsive maneuver planner"
publish = false

[lib]
name = "_koenig_planner"
crate-type = ["cdylib", "rlib"]

[dependencies]
koenig-damico-planner-api = { path = "../api" }
# NOTE: `extension-module` is intentionally NOT enabled here. maturin adds
# `--features pyo3/extension-module` at wheel-build time (see pyproject.toml).
# Leaving it off lets `cargo clippy -p koenig-damico-planner-py` run without libpython.
pyo3 = { version = "0.29", features = ["abi3-py39"] }
