[package]
name = "koenig-damico-planner-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Self-hostable HTTP service for the Koenig-D'Amico fuel-optimal impulsive maneuver planner"
publish = false

[dependencies]
koenig-damico-planner-api = { path = "../api" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde_json = "1.0"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
