[package]
name = "koenig-damico-planner-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Self-hostable HTTP service for the Koenig-D'Amico fuel-optimal impulsive maneuver planner"
publish = false

[dependencies]
koenig-damico-planner-api = { path = "../api" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.7", features = ["cors", "trace", "limit", "timeout", "catch-panic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde_json = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
