[package]
name = "koenig-damico-planner-wasm"
version = "0.2.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "WebAssembly bindings + browser demo for the Koenig-D'Amico maneuver planner"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
koenig-damico-planner-api = { path = "../api" }
wasm-bindgen = "0.2"
tsify = { version = "0.5", default-features = false, features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
