[package]
name = "koenig-damico-planner-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WebAssembly bindings for the Koenig-D'Amico fuel-optimal impulsive maneuver planner"
repository = "https://github.com/sakobu/koenig-planner"
keywords = ["astrodynamics", "formation-flying", "spacecraft", "orbit", "webassembly"]
# crates.io flag only — this crate ships to npm (as `koenig-planner`), never to crates.io.
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
koenig-damico-planner-api = { path = "../api" }
wasm-bindgen = "0.2"
tsify = { version = "0.5", default-features = false, features = ["js"] }
serde = { workspace = true }
serde_json = { workspace = true }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
